--- a/assets/site.css
+++ b/assets/site.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0 auto;
   background: #fefefe;
@@ -43,7 +46,9 @@ h1, h2, h3, h4, h5, h6 {
 .background img {
   object-fit: cover;
   width: 100%;
+  max-width: 1024px;
   height: 200px;
+  object-position: 0 -50px;
   filter: opacity(20%);
 }
 
@@ -70,14 +75,16 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .background {
-    width: 100%;
-    height: 600px;
+    width: calc(100% - 250px);
+    height: 550px;
     margin-left: 250px;
     top: 40px;
   }
 
   .background img {
-    height: 600px;
+    max-width: inherit;
+    height: inherit;
+    /*height: 600px;*/
   }
 
   p.name {
