--- a/assets/site.css
+++ b/assets/site.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
 }
 
+.header {
+  padding-bottom: 50px;
+}
+
 .header p, h1 {
   padding-left: 20px;
 }
@@ -70,6 +74,7 @@ h1, h2, h3, h4, h5, h6 {
   /* header */
   .header {
     margin-top: 80px;
+    padding-bottom: 0;
     width: 100%;
     height: 600px;
   }
