--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -1,11 +1,19 @@
 /* Header */
 
+.top {
+  min-height: 100vh;
+}
+
 .header {
   padding-bottom: 10px;
 }
 
-.header p, h1 {
+p, h1, h2, .arrow {
   padding-left: 20px;
+}
+
+.tag, .subtag {
+  padding-right: 20px;
 }
 
 .name {
@@ -26,7 +34,6 @@
 }
 
 .subtag {
-  margin: 20px;
   font-family: 'Montserrat', sans-serif;
   line-height: 2;
 }
@@ -48,6 +55,8 @@
 .arrow {
   width: 100%;
   text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .arrow img {
@@ -58,6 +67,13 @@
 @media only screen and (min-width: 800px) {
   body {
     margin: 0 auto;
+  }
+
+  p, h1, h2, .arrow {
+    padding-left: 60px;
+  }
+  .tag, .subtag {
+    padding-right: 60px;
   }
 
   /* header */
@@ -82,12 +98,10 @@
 
   .tag {
     font-size: 54px;
-    padding-left: 17px;
   }
 
   .arrow {
     text-align: left;
-    margin-left: 20px;
   }
 }
 
@@ -109,7 +123,6 @@
 }
 
 .blurb {
-  margin: 0 20px;
 }
 
 .blurb p {
@@ -136,11 +149,15 @@
   }
 
   .blurb {
-    margin-top: 100px;
+    margin: 100px 0 0 0;
   }
 
   .blurb h2 {
     white-space: nowrap;
+  }
+
+  div.experience {
+    padding-left: 0;
   }
 }
 
