--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -5,14 +5,13 @@
 .nav-header {
   display: flex;
   justify-content: space-between;
-  background-color: rgb(235, 235, 235);
+  background-color: rgb(240, 240, 255);
   padding: 20px;
   margin: 0;
 }
 
 .name {
   font-family: 'Roboto', sans-serif;
-  margin: 0;
   font-size: 22px;
 }
 
@@ -46,7 +45,7 @@
 }
 
 .portfolio {
-  margin: 20px;
+  margin: 20px 20px;
 }
 
 .role-key {
@@ -67,6 +66,7 @@
 
 .portfolio img {
   width: 100%;
+  height: 100%;
 }
 
 @media only screen and (min-width: 800px) {
@@ -77,7 +77,8 @@
   }
 
   .name {
-    width: 200px;
+    width: 160px;
+    margin: 0 40px;
   }
 
   .name a {
@@ -105,6 +106,7 @@
 
   .portfolio {
     display: flex;
+    margin: 20px 60px;
   }
 
   .role {
@@ -130,10 +132,6 @@
   }
 
   .images img {
-    margin-left: -25px;
-/*    width: 50%;
-    min-width: 300px;*/
-/*    max-width: 600px;
-    min-width: 200px;*/
+    margin-left: -4.2%;
   }
 }
