Fix bottom margin

--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -165,7 +165,7 @@ p, h1, h2, .arrow {
 /* Experience */
 
 .experience {
-  margin: 50px 0;
+  margin: 50px 0 0 0;
   background-color: #EEEEFF;
   padding-left: 20px;
 }
