--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -112,6 +112,10 @@ p, h1, h2, .arrow {
   flex-wrap: wrap-reverse;
 }
 
+.image {
+  max-width: 100%;
+}
+
 .image img {
   max-width: 100%;
   height: auto;
@@ -119,6 +123,7 @@ p, h1, h2, .arrow {
 
 .client {
   width: 100%;
+  margin: 30px 0;
 }
 
 .blurb {
@@ -133,12 +138,16 @@ p, h1, h2, .arrow {
   text-decoration: underline;
 }
 
+.recursive {
+  background-color: rgba(48, 98, 225, .2)
+}
+
 .fhc {
-  background-color: rgba(18, 120, 198,.20);
+  background-color: rgba(18, 120, 198, .2);
 }
 
 .mfd {
-  background-color: rgba(200, 200, 200, .20);
+  background-color: rgba(200, 200, 200, .2);
 }
 
 @media only screen and (min-width: 800px) {
@@ -149,6 +158,7 @@ p, h1, h2, .arrow {
 
   .blurb {
     margin: 100px 0 0 0;
+    min-width: 300px;
   }
 
   .blurb h2 {
